# mheatmap

./: .flake8  .gitignore  .markdownlint.json  404.html  CLAUDE.md  DEV_PLAN.md  LICENSE  MANIFEST.in  README.md  amc_postprocess.html  api.html  index.html  install.html  mkdocs.yml  mosaic_heatmap.html  objects.inv  pyproject.toml  rms_permutation.html  setup.cfg  sitemap.xml  spectral_reordering.html  test.ipynb
.github/workflows/: ci.yml
Examples/: _rectangular_tw_common.py
Examples/acs_pums_rectangular/: demo_tw_mosaic.py
Examples/lodes_rectangular/: demo_tw_mosaic.py
Examples/naics_sic_rectangular/: demo_tw_mosaic.py
Examples/rectangular_evaluation/: README.md  _benchmark_utils.py  make_synthetic_results_table.py  run_realdata_evaluation.py  run_synthetic_alpha_sweep.py  run_synthetic_evaluation.py
api/: amc-postprocess.html  graph.html  index.html  mosaic-heatmap.html  rms-permute.html
blog/: index.html
data/rectangular_evaluation/: README.md
docs/: .pages  api.md  index.md  install.md
docs/.zh/: .pages  amc_postprocess.md  getting-started.md  index.md  installation.md
docs/api/: .pages  amc-postprocess.md  graph.md  index.md  mosaic-heatmap.md  rms-permute.md  spectral-permute.md
docs/examples/: .pages  mosaic_heatmap.md  rms_permute.ipynb  rms_permute.md  spectral_permute.ipynb  spectral_permute.md
docs/examples/.ipynb_checkpoints/: mosaic_heatmap-checkpoint.ipynb  rms_permute-checkpoint.ipynb  spectral_permute-checkpoint.ipynb
docs/examples/data/: Salinas_spectralclustering.csv
docs/user-guide/: index.md
examples/: README.md  advanced_features.py  basic_usage.py  bio_spatial_omics.ipynb  index.html  mosaic_heatmap.html  mosaic_heatmap.ipynb  rms_permute.html  rms_permute.ipynb  spectral_permute.html  spectral_permute.ipynb
search/: search_index.js  search_index.json
src/mheatmap/: __init__.py  _amc_postprocess.py  _helper.py  _mosaic_heatmap.py  _rms_permute.py  _spectral_permute.py  amc_postprocess.py  constants.py  matrix.py  rms_permute.py
src/mheatmap/graph/: __init__.py  _copermute_from_bipermute.py  _spectral_permute.py  _two_walk_laplacian.py
src/mheatmap/utils/: __init__.py  _base.py  plot_bipartite_confusion_matrix.py  plot_eigen.py
tests/: conftest.py  test_graph.py  test_matrix.py  test_postprocess.py  test_rms_permute.py
user-guide/: getting-started.html  index.html
