[metadata]
name = mheatmap
version = 1.0.1
author = Juntang Wang
author_email = jw853@duke.edu
description = A package for mosaic/proportional heatmap visualization and matrix analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qqgjyx/mheatmap
project_urls =
    Bug Tracker = https://github.com/qqgjyx/mheatmap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    seaborn
    scipy
    scikit-learn

[options.packages.find]
where = src

[options.package_data]
mheatmap =
    docs/*
    docs/assets/*
    docs/examples/images/*